--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -17,6 +17,11 @@ body{
 .flex-list{
     display: flex;
 }
+.do-fl-center{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 .button{
   font-size: 13px;
   font-weight: 700;
