--- a/public/styles.css
+++ b/public/styles.css
@@ -118,6 +118,10 @@ body {
   justify-content: center;
 }
 
+.clear-fix {
+  clear: both;
+}
+
 .button {
   font-size: 13px;
   font-weight: 700;
@@ -132,6 +136,9 @@ body {
   background: #fff;
   color: #8f9bb3;
   border-radius: 53px;
+}
+.button.white.square {
+  border-radius: 8px;
 }
 .button.white:hover {
   background: #00a1ff;
@@ -278,9 +285,7 @@ main img {
   color: #252e37;
 }
 .why-us .big-list {
-  padding-top: 85px;
-  width: 760px;
-  margin: auto;
+  padding: 85px 20px 0 20px;
 }
 .why-us .big-list.normal .item {
   justify-content: space-between;
@@ -332,4 +337,146 @@ main img {
 }
 .why-us .big-list .item:last-child {
   padding-bottom: 0px;
+}
+
+footer {
+  padding: 71px 0 71px 0;
+  background: #00a1ff;
+  margin-top: 120px;
+}
+footer h2 {
+  color: #fff;
+  font-size: 56px;
+  font-weight: 700;
+  line-height: 56px;
+  text-align: center;
+  padding-bottom: 20px;
+}
+footer .button {
+  margin: auto;
+  display: table;
+  border: 1px solid #00a1ff;
+  color: #00a1ff;
+}
+footer .button:hover {
+  border: 1px solid #fff;
+}
+
+@media (min-width: 1950px) {
+  main.normal img {
+    width: 45%;
+  }
+}
+@media (min-width: 1201px) {
+  .info {
+    position: relative;
+    top: 130px;
+  }
+}
+@media (min-width: 801px) {
+  .why-us .big-list {
+    width: 760px;
+    margin: auto;
+  }
+}
+@media (max-width: 1200px) {
+  .wrapper {
+    width: 100%;
+  }
+
+  main {
+    padding: 80px 20px 80px 20px;
+  }
+  main .info {
+    width: 45%;
+  }
+  main img {
+    width: 50%;
+    height: auto;
+  }
+
+  .list {
+    margin-top: 0px;
+    padding-top: 60px;
+  }
+  .list.normal {
+    margin-top: 0px;
+  }
+}
+@media (max-width: 1070px) {
+  .list .items {
+    flex-wrap: wrap;
+  }
+  .list .items .item {
+    width: 49%;
+  }
+}
+@media (max-width: 900px) {
+  body br {
+    display: none;
+  }
+
+  button {
+    font-size: 18px;
+  }
+
+  .why-us .big-list .item {
+    display: block;
+    text-align: center;
+  }
+  .why-us .big-list .item .img {
+    margin: auto;
+    margin-top: 30px;
+  }
+}
+@media (max-width: 820px) {
+  main {
+    padding: 40px 0px 40px 20px;
+  }
+  main .info {
+    width: 100%;
+    padding-right: 20px;
+    padding-bottom: 20px;
+  }
+  main .info h1 {
+    font-size: 35px;
+    line-height: 41px;
+  }
+  main.normal img {
+    position: static;
+    float: right;
+    width: 300px;
+  }
+
+  .list.normal .items {
+    display: block;
+  }
+  .list.normal .items .item {
+    width: 100%;
+  }
+
+  .why-us {
+    padding-top: 40px;
+  }
+  .why-us .big-list.normal {
+    padding: 45px 20px 0 20px;
+  }
+  .why-us .big-list.normal .item .text h3 {
+    font-size: 25px;
+    line-height: 28px;
+  }
+  .why-us .big-list.normal .item .img {
+    width: 100%;
+  }
+  .why-us h2 {
+    font-size: 35px;
+    line-height: 41px;
+  }
+
+  footer {
+    padding: 31px 0 31px 0;
+  }
+  footer h2 {
+    font-size: 35px;
+  }
 }
