--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -1,2 +1,22 @@
 footer{
+    padding: 71px 0 71px 0;
+    background: rgba(0, 161, 255, 1);
+    margin-top: 120px;
+    h2{
+        color: $white-text-color;
+        font-size: 56px;
+        font-weight: 700;
+        line-height: 56px;
+        text-align: center;
+        padding-bottom: 20px;
+    }
+    .button{
+        margin: auto;
+        display: table;
+        border: 1px solid rgba(0, 161, 255, 1);
+        color: rgba(0, 161, 255, 1);
+        &:hover{
+            border: 1px solid #fff;
+        }
+    }
 }
