--- a/src/styles/why-us.scss
+++ b/src/styles/why-us.scss
@@ -8,9 +8,8 @@
         color: $dark-text-color;
     }
     .big-list{
-        padding-top: 85px;
-        width: 760px;
-        margin: auto;
+        padding: 85px 20px 0 20px;
+        
         &.normal{
             .item{
                 justify-content: space-between;
